[tool.poetry]
name = "fastapi-lms"
version = "0.1.0"
description = ""
authors = ["Anh KhOa <anhkhoa01010902.atg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
pydantic = "^2.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
